# Computations

./: 2dSim.m  README.md
2Dsim/: README.md  RoombaBoomba.cpp  a.out  matplotlibcpp.h
LeanNNs/: AIAgent.cpp  AIAgent.h  CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  NN 1  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
NNs from Previous Project/: Agent.cs  MathHelper.cs
NNs from Previous Project/Genetics/: GeneticAlgorithm.cs  GeneticsManager.cs  Genotype.cs
NNs from Previous Project/Neural Networks/: Neural Layer.cs  NeuralNetwork.cs
NeuralNetworksV1/: NeuralNetworksV1.sln
NeuralNetworksV1/Debug/: NeuralNetworksV1.ilk
NeuralNetworksV1/NeuralNetworksV1/: NeuralLayer.cpp  NeuralNetworksV1.cpp  NeuralNetworksV1.vcxproj  NeuralNetworksV1.vcxproj.filters
NeuralNetworksV1/NeuralNetworksV1/Debug/: NeuralNetworksV1.pch  vc141.idb
NeuralNetworksV1/NeuralNetworksV1/Debug/NeuralNetworksV1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NeuralNetworksV1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NeuralNetworksV1/NeuralNetworksV1/Neural Networks/: NeuralLayer.cpp
NeuralNetworksV3/: NeuralNetworksV3.sln
NeuralNetworksV3/Debug/: NeuralNetworksV3.ilk
NeuralNetworksV3/NeuralNetworksV3/: Agent.cpp  Agent.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticsManager.cpp  GeneticsManager.h  Genotype.cpp  Genotype.h  MathHelper.cpp  MathHelper.h  NeuralLayer.cpp  NeuralLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworksV3.cpp  NeuralNetworksV3.vcxproj  NeuralNetworksV3.vcxproj.filters
NeuralNetworksV3/NeuralNetworksV3/Debug/: NeuralNetworksV3.pch  vc141.idb
NeuralNetworksV3/NeuralNetworksV3/Debug/NeuralNetworksV3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NeuralNetworksV3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
plottingTests/: README.md  plot.cpp
roomba_host/: CMakeLists.txt  \  roombacircle.cc  roombacircle.world  roombacircle2.cc  roombacircle3.cc  roombacircle4.cc  roombamodel.cc  roombamodel.world  roombasim.cc  roombasim.world  roombatest.world  target1.cc  target10.cc  target2.cc  target3.cc  target4.cc  target5.cc  target6.cc  target7.cc  target8.cc  target9.cc
roomba_host/models/mygroundplane/: model.config  model.sdf
roomba_host/models/mygroundplane/materials/scripts/: mygroundplane.material
roomba_host/models/obstacle/: model.config  model.sdf
roomba_host/models/roomba1/: model.config  model.sdf
roomba_host/models/roomba2/: model.config  model.sdf
